--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@
   font-family: sans-serif;
   /* font-size: 1.5rem; */
   /* font-size: 4vw; */
-  color: rgba(0,0,255,0.5);   
+  color: #000050;   
 }
 
 .swal2-popup .swal2-text {
