--- a/src/CSS/AboutUsBriefComponent.css
+++ b/src/CSS/AboutUsBriefComponent.css
@@ -162,7 +162,7 @@
 
     .about-us-brief-image{
       /* background-color: red; */
-      width: 100%;
+      width: 300px;
       height: 300px;
     }
 
