--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@
   font-family: sans-serif;
   /* font-size: 1.5rem; */
   /* font-size: 4vw; */
-  color: #119458;   
+  color: #0CC1E0;   
 }
 
 .swal2-popup .swal2-text {
